Added Manufacturer parts to search, fixed icons, added manufacturer view in supplier part detail page

--- a/InvenTree/company/templates/company/detail.html
+++ b/InvenTree/company/templates/company/detail.html
@@ -51,12 +51,12 @@
             <col width='25'>
             <col>
             <tr>
-                <td><span class='fas fa-building'></span></td>
+                <td><span class='fas fa-industry'></span></td>
                 <td>{% trans "Manufacturer" %}</td>
                 <td>{% include "yesnolabel.html" with value=company.is_manufacturer %}</td>
             </tr>
             <tr>
-                <td><span class='fas fa-warehouse'></span></td>
+                <td><span class='fas fa-building'></span></td>
                 <td>{% trans "Supplier" %}</td>
                 <td>{% include 'yesnolabel.html' with value=company.is_supplier %}</td>
             </tr>
