--- a/InvenTree/company/templates/company/manufacturer_part_navbar.html
+++ b/InvenTree/company/templates/company/manufacturer_part_navbar.html
@@ -10,7 +10,7 @@
 
     <li class='list-group-item {% if tab == "suppliers" %}active{% endif %}' title='{% trans "Supplier Parts" %}'>
         <a href='{% url "manufacturer-part-suppliers" part.id %}'>
-            <span class='fas fa-warehouse'></span>
+            <span class='fas fa-building'></span>
             {% trans "Suppliers" %}
         </a>
     </li>
