--- a/InvenTree/company/templates/company/supplier_part_navbar.html
+++ b/InvenTree/company/templates/company/supplier_part_navbar.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load inventree_extras %}
 
 <ul class='list-group'>
 
@@ -7,6 +8,16 @@
             <span class='menu-tab-icon fas fa-expand-arrows-alt'></span>
         </a>
     </li>
+
+    {% setting_object 'PART_ENABLE_MANUFACTURER_PARTS' as manufacturer_parts %}
+    {% if manufacturer_parts.value == "True" %}
+    <li class='list-group-item {% if tab == "manufacturers" %}active{% endif %}' title='{% trans "Manufacturer Parts" %}'>
+        <a href='{% url "supplier-part-manufacturers" part.id %}'>
+            <span class='fas fa-industry'></span>
+            {% trans "Manufacturers" %}
+        </a>
+    </li>
+    {% endif %}
 
     <li class='list-group-item {% if tab == "stock" %}active{% endif %}' title='{% trans "Supplier Part Stock" %}'>
         <a href='{% url "supplier-part-stock" part.id %}'>
