--- a/InvenTree/company/templates/company/navbar.html
+++ b/InvenTree/company/templates/company/navbar.html
@@ -21,7 +21,7 @@
     {% if manufacturer_parts.value == "True" and company.is_manufacturer %}
     <li class='list-group-item {% if tab == "manufacturer_parts" %}active{% endif %}' title='{% trans "Manufactured Parts" %}'>
         <a href='{% url "company-detail-manufacturer-parts" company.id %}'>
-            <span class='fas fa-building'></span>
+            <span class='fas fa-industry'></span>
             {% trans "Manufactured Parts" %}
         </a>
     </li>
@@ -29,7 +29,7 @@
     {% if company.is_supplier or company.is_manufacturer %}
     <li class='list-group-item {% if tab == "supplier_parts" %}active{% endif %}' title='{% trans "Supplied Parts" %}'>
         <a href='{% url "company-detail-supplier-parts" company.id %}'>
-            <span class='fas fa-warehouse'></span>
+            <span class='fas fa-building'></span>
             {% trans "Supplied Parts" %}
         </a>
     </li>
