Fixes to the way ManufacturerPart is saved, manufacturer table filtering and test units

--- a/InvenTree/company/templates/company/supplier_part_manufacturers.html
+++ b/InvenTree/company/templates/company/supplier_part_manufacturers.html
@@ -33,7 +33,7 @@
         "{% url 'api-manufacturer-part-list' %}",
         {
             params: {
-                part: {{ part.id }},
+                supplier_part: {{ part.id }},
                 part_detail: true,
                 manufacturer_detail: true,
             },
