--- a/InvenTree/company/templates/company/supplier_part_orders.html
+++ b/InvenTree/company/templates/company/supplier_part_orders.html
@@ -14,7 +14,7 @@
 {% if roles.purchase_order.add %}
 <div id='button-bar'>
     <div class='btn-group'>
-        <button class='btn btn-primary' type='button' id='order-part2' title='Order part'>
+        <button class='btn btn-primary' type='button' id='order-part2' title='{% trans "Order part" %}'>
             <span class='fas fa-shopping-cart'></span> {% trans "Order Part" %}</button>
     </div>
 </div>
