--- a/InvenTree/part/templates/part/params.html
+++ b/InvenTree/part/templates/part/params.html
@@ -65,8 +65,8 @@
             reload: true,
             secondary: [{
                 field: 'template',
-                label: 'New Template',
-                title: 'Create New Parameter Template',
+                label: '{% trans "New Template" %}',
+                title: '{% trans "Create New Parameter Template" %}',
                 url: "{% url 'part-param-template-create' %}"
             }],
         });
