--- a/InvenTree/part/templates/part/part_base.html
+++ b/InvenTree/part/templates/part/part_base.html
@@ -246,7 +246,7 @@
         launchModalForm(
             "{% url 'part-pricing' part.id %}",
             {
-                submit_text: 'Calculate',
+                submit_text: '{% trans "Calculate" %}',
                 hideErrorMessage: true,
             }
         );
