--- a/InvenTree/part/templates/part/part_pricing.html
+++ b/InvenTree/part/templates/part/part_pricing.html
@@ -1,35 +1,37 @@
 {% extends "modal_form.html" %}
 
+{% load i18n %}
+
 {% block pre_form_content %}
 
 <div class='alert alert-info alert-block'>
-Pricing information for:<br>
+{% trans 'Pricing information for:' %}<br>
 {{ part }}.
 </div>
 
-<h4>Quantity</h4>
+<h4>{% trans 'Quantity' %}</h4>
 <table class='table table-striped table-condensed'>
     <tr>
-        <td><b>Part</b></td>
+        <td><b>{% trans 'Part' %}</b></td>
         <td colspan='2'>{{ part  }}</td>
     </tr>
     <tr>
-        <td><b>Quantity</b></td>
+        <td><b>{% trans 'Quantity' %}</b></td>
         <td colspan='2'>{{ quantity }}</td>
     </tr>
 </table>
     {% if part.supplier_count > 0 %}
-    <h4>Supplier Pricing</h4>
+    <h4>{% trans 'Supplier Pricing' %}</h4>
 <table class='table table-striped table-condensed'>
     {% if min_total_buy_price %}
     <tr>
-        <td><b>Unit Cost</b></td>
+        <td><b>{% trans 'Unit Cost' %}</b></td>
         <td>Min: {% include "price.html" with price=min_unit_buy_price %}</td>
         <td>Max: {% include "price.html" with price=max_unit_buy_price %}</td>
     </tr>
     {% if quantity > 1 %}
     <tr>
-        <td><b>Total Cost</b></td>
+        <td><b>{% trans 'Total Cost' %}</b></td>
         <td>Min: {% include "price.html" with price=min_total_buy_price %}</td>
         <td>Max: {% include "price.html" with price=max_total_buy_price %}</td>
     </tr>
@@ -37,7 +39,7 @@ Pricing information for:<br>
     {% else %}
     <tr>
         <td colspan='3'>
-            <span class='warning-msg'><i>No supplier pricing available</i></span>
+            <span class='warning-msg'><i>{% trans 'No supplier pricing available' %}</i></span>
         </td>
     </tr>
     {% endif %}
@@ -45,17 +47,17 @@ Pricing information for:<br>
     {% endif %}
 
     {% if part.bom_count > 0 %}
-    <h4>BOM Pricing</h4>
+    <h4>{% trans 'BOM Pricing' %}</h4>
 <table class='table table-striped table-condensed'>
     {% if min_total_bom_price %}
     <tr>
-        <td><b>Unit Cost</b></td>
+        <td><b>{% trans 'Unit Cost' %}</b></td>
         <td>Min: {% include "price.html" with price=min_unit_bom_price %}</td>
         <td>Max: {% include "price.html" with price=max_unit_bom_price %}</td>
     </tr>
     {% if quantity > 1 %}
     <tr>
-        <td><b>Total Cost</b></td>
+        <td><b>{% trans 'Total Cost' %}</b></td>
         <td>Min: {% include "price.html" with price=min_total_bom_price %}</td>
         <td>Max: {% include "price.html" with price=max_total_bom_price %}</td>
     </tr>
@@ -63,14 +65,14 @@ Pricing information for:<br>
     {% if part.has_complete_bom_pricing == False %}
     <tr>
         <td colspan='3'>
-            <span class='warning-msg'><i>Note: BOM pricing is incomplete for this part</i></span>
+            <span class='warning-msg'><i>{% trans 'Note: BOM pricing is incomplete for this part' %}</i></span>
         </td>
     </tr>
     {% endif %}
     {% else %}
     <tr>
         <td colspan='3'>
-            <span class='warning-msg'><i>No BOM pricing available</i></span>
+            <span class='warning-msg'><i>{% trans 'No BOM pricing available' %}</i></span>
         </td>
     </tr>
     {% endif %}
@@ -80,7 +82,7 @@ Pricing information for:<br>
 {% if min_unit_buy_price or min_unit_bom_price %}
 {% else %}
 <div class='alert alert-danger alert-block'>
-    No pricing information is available for this part.
+    {% trans 'No pricing information is available for this part.' %}
 </div>
 {% endif %}
 
