made filters.js dynamic for translation

--- a/InvenTree/templates/base.html
+++ b/InvenTree/templates/base.html
@@ -139,7 +139,6 @@ InvenTree
 
 <script type='text/javascript' src="{% static 'script/inventree/inventree.js' %}"></script>
 <script type='text/javascript' src="{% static 'script/inventree/api.js' %}"></script>
-<script type='text/javascript' src="{% static 'script/inventree/filters.js' %}"></script>
 <script type='text/javascript' src="{% static 'script/inventree/notification.js' %}"></script>
 <script type='text/javascript' src="{% static 'script/inventree/sidenav.js' %}"></script>
 
@@ -156,6 +155,7 @@ InvenTree
 <script type='text/javascript' src="{% url 'calendar.js' %}"></script>
 <script type='text/javascript' src="{% url 'tables.js' %}"></script>
 <script type='text/javascript' src="{% url 'table_filters.js' %}"></script>
+<script type='text/javascript' src="{% url 'filters.js' %}"></script>
 
 <script type='text/javascript' src="{% static 'fontawesome/js/solid.js' %}"></script>
 <script type='text/javascript' src="{% static 'fontawesome/js/brands.js' %}"></script>
