Cosmetic changes in login screen

--- a/InvenTree/templates/registration/login.html
+++ b/InvenTree/templates/registration/login.html
@@ -44,7 +44,7 @@
             <div class='container-fluid'>
                 <div class='clearfix content-heading login-header'>
                     <img class="pull-left" src="{% static 'img/inventree.png' %}" width="60" height="60"/>
-                    <span><h3>{% inventree_title %} </h3></span>
+                    <span style="text-align: right;"><h3 style="font-size:18px">{% inventree_title %} </h3></span>
                 </div>
                     <hr>
 
