--- a/InvenTree/part/templates/part/bom_upload/upload_file.html
+++ b/InvenTree/part/templates/part/bom_upload/upload_file.html
@@ -24,7 +24,7 @@
 </div>
 
 <form method="post" action='' class='js-modal-form' enctype="multipart/form-data">
-    <button type="submit" class="save btn btn-default">Upload File</button>
+    <button type="submit" class="save btn btn-default">{% trans 'Upload File' %}</button>
     {% csrf_token %}
     {% load crispy_forms_tags %}
 
