--- a/InvenTree/order/templates/order/order_complete.html
+++ b/InvenTree/order/templates/order/order_complete.html
@@ -1,12 +1,14 @@
 {% extends "modal_form.html" %}
 
+{% load i18n %}
+
 {% block pre_form_content %}
 
-Mark this order as complete?
+{% trans 'Mark this order as complete?' %}
 {% if not order.is_complete %}
 <div class='alert alert-warning alert-block'>
-    This order has line items which have not been marked as received.
-    Marking this order as complete will remove these line items.
+    {%trans 'This order has line items which have not been marked as received.
+    Marking this order as complete will remove these line items.' %}
 </div>
 {% endif %}
 
