set language in the used js scripts

--- a/InvenTree/order/templates/order/purchase_orders.html
+++ b/InvenTree/order/templates/order/purchase_orders.html
@@ -116,6 +116,7 @@ InvenTree | {% trans "Purchase Orders" %}
             initialView: 'dayGridMonth',
             nowIndicator: true,
             aspectRatio: 2.5,
+            locale: '{{request.LANGUAGE_CODE}}',
             datesSet: function() {
                 loadOrderEvents(calendar);
             }
