--- a/InvenTree/order/templates/order/sales_orders.html
+++ b/InvenTree/order/templates/order/sales_orders.html
@@ -115,6 +115,7 @@ InvenTree | {% trans "Sales Orders" %}
             initialView: 'dayGridMonth',
             nowIndicator: true,
             aspectRatio: 2.5,
+            locale: '{{request.LANGUAGE_CODE}}',
             datesSet: function() {
                 loadOrderEvents(calendar);
             },
