--- a/InvenTree/company/templates/company/navbar.html
+++ b/InvenTree/company/templates/company/navbar.html
@@ -2,8 +2,6 @@
 {% load static %}
 {% load inventree_extras %}
 
-{% setting_object 'PART_ENABLE_MANUFACTURER_PARTS' as manufacturer_parts %}
-
 <ul class='list-group'>
     <li class='list-group-item'>
         <a href='#' id='company-menu-toggle'>
@@ -18,7 +16,7 @@
         </a>
     </li>
 
-    {% if manufacturer_parts.value == "True" and company.is_manufacturer %}
+    {% if company.is_manufacturer %}
     <li class='list-group-item {% if tab == "manufacturer_parts" %}active{% endif %}' title='{% trans "Manufactured Parts" %}'>
         <a href='{% url "company-detail-manufacturer-parts" company.id %}'>
             <span class='fas fa-industry'></span>
@@ -26,6 +24,7 @@
         </a>
     </li>
     {% endif %}
+    
     {% if company.is_supplier or company.is_manufacturer %}
     <li class='list-group-item {% if tab == "supplier_parts" %}active{% endif %}' title='{% trans "Supplied Parts" %}'>
         <a href='{% url "company-detail-supplier-parts" company.id %}'>
