--- a/InvenTree/templates/about.html
+++ b/InvenTree/templates/about.html
@@ -25,14 +25,20 @@
                                 <td><span class='fas fa-hashtag'></span></td>
                                 <td>{% trans "Django Version" %}</td><td><a href="https://www.djangoproject.com/">{% django_version %}</a></td>
                             </tr>
+                            {% inventree_commit_hash as hash %}
+                            {% if hash %}
                             <tr>
                                 <td><span class='fas fa-code-branch'></span></td>
-                                <td>{% trans "Commit Hash" %}</td><td><a href="https://github.com/inventree/InvenTree/commit/{% inventree_commit_hash %}">{% inventree_commit_hash %}</a></td>
+                                <td>{% trans "Commit Hash" %}</td><td>{{ hash }}</td>
                             </tr>
+                            {% endif %}
+                            {% inventree_commit_date as commit_date %}
+                            {% if commit_date %}
                             <tr>
                                 <td><span class='fas fa-calendar-alt'></span></td>
-                                <td>{% trans "Commit Date" %}</td><td>{% inventree_commit_date %}</td>
+                                <td>{% trans "Commit Date" %}</td><td>{{ commit_date }}</td>
                             </tr>
+                            {% endif %}
                             <tr>
                                 <td><span class='fas fa-book'></span></td>
                                 <td>{% trans "InvenTree Documentation" %}</td>
