Dynamic control of information to make cleaner supplier and manufacturer tables

--- a/InvenTree/part/templates/part/manufacturer.html
+++ b/InvenTree/part/templates/part/manufacturer.html
@@ -81,7 +81,7 @@
         {
             params: {
                 part: {{ part.id }},
-                part_detail: true,
+                part_detail: false,
                 manufacturer_detail: true,
             },
         }
