--- a/InvenTree/part/templates/part/supplier.html
+++ b/InvenTree/part/templates/part/supplier.html
@@ -85,7 +85,7 @@
         {
             params: {
                 part: {{ part.id }},
-                part_detail: true,
+                part_detail: false,
                 supplier_detail: true,
                 manufacturer_detail: true,
             },
