--- a/InvenTree/company/templates/company/manufacturer_part_suppliers.html
+++ b/InvenTree/company/templates/company/manufacturer_part_suppliers.html
@@ -77,9 +77,9 @@ loadSupplierPartTable(
         params: {
             part: {{ part.part.id }},
             manufacturer_part: {{ part.id }},
-            part_detail: true,
+            part_detail: false,
             supplier_detail: true,
-            manufacturer_detail: true,
+            manufacturer_detail: false,
         },
     }
 );
