PO table and stock item template improvements

--- a/InvenTree/order/templates/order/purchase_order_detail.html
+++ b/InvenTree/order/templates/order/purchase_order_detail.html
@@ -181,6 +181,9 @@ $("#po-table").inventreeTable({
             sortName: 'part__MPN',
             field: 'supplier_part_detail.MPN',
             title: '{% trans "MPN" %}',
+            formatter: function(value, row, index, field) {
+                return renderLink(value, `/manufacturer-part/${row.supplier_part_detail.manufacturer_part.pk}/`);
+            },
         },
         {
             sortable: true,
