--- a/InvenTree/part/templates/part/partial_delete.html
+++ b/InvenTree/part/templates/part/partial_delete.html
@@ -1,14 +1,15 @@
 {% extends "modal_form.html" %}
+{% load i18n %}
 
 {% block pre_form_content %}
 
 <div class='alert alert-block alert-danger'>
-    Are you sure you want to delete part '<b>{{ part.full_name }}</b>'?
+    {% trans "Are you sure you want to delete part" %} '<b>{{ part.full_name }}</b>'?
 </div>
 
 {% if part.used_in_count %}
 <hr>
-<p>This part is used in BOMs for {{ part.used_in_count }} other parts. If you delete this part, the BOMs for the following parts will be updated:
+<p>{% trans "This part is used in BOMs for" %} {{ part.used_in_count }} {% trans "other parts. If you delete this part, the BOMs for the following parts will be updated" %}:
 <ul class="list-group">
     {% for child in part.used_in.all %}
     <li class='list-group-item'>{{ child.part.full_name }} - {{ child.part.description }}</li>
@@ -18,7 +19,7 @@
 
 {% if part.stock_items.all|length > 0 %}
 <hr>
-<p>There are {{ part.stock_items.all|length }} stock entries defined for this part. If you delete this part, the following stock entries will also be deleted:
+<p>{% trans "There are" %} {{ part.stock_items.all|length }} {% trans "stock entries defined for this part. If you delete this part, the following stock entries will also be deleted" %}:
     <ul class='list-group'>
         {% for stock in part.stock_items.all %}
         <li class='list-group-item'>{{ stock }}</li>
@@ -27,9 +28,20 @@
 </p>
 {% endif %}
 
+{% if part.manufacturer_parts.all|length > 0 %}
+<hr>
+<p>{% trans "There are" %} {{ part.manufacturer_parts.all|length }} {% trans "manufacturers defined for this part. If you delete this part, the following manufacturer parts will also be deleted" %}:
+    <ul class='list-group'>
+        {% for spart in part.manufacturer_parts.all %}
+        <li class='list-group-item'>{{ spart.manufacturer.name }} - {{ spart.MPN }}</li>
+        {% endfor %}
+    </ul>
+</p>
+{% endif %}
+
 {% if part.supplier_parts.all|length > 0 %}
 <hr>
-<p>There are {{ part.supplier_parts.all|length }} suppliers defined for this part. If you delete this part, the following supplier parts will also be deleted.
+<p>{% trans "There are" %} {{ part.supplier_parts.all|length }} {% trans "suppliers defined for this part. If you delete this part, the following supplier parts will also be deleted" %}:
     <ul class='list-group'>
         {% for spart in part.supplier_parts.all %}
         <li class='list-group-item'>{{ spart.supplier.name }} - {{ spart.SKU }}</li>
@@ -40,7 +52,7 @@
 
 {% if part.serials.all|length > 0 %}
 <hr>
-<p>There are {{ part.serials.all|length }} unique parts tracked for '{{ part.full_name }}'. Deleting this part will permanently remove this tracking information.</p>
+<p>{% trans "There are" %} {{ part.serials.all|length }} {% trans "unique parts tracked for" %} '{{ part.full_name }}'. {% trans "Deleting this part will permanently remove this tracking information" %}.</p>
 {% endif %}
 
 {% endblock %}
