Password reset templates

--- a/InvenTree/templates/registration/login.html
+++ b/InvenTree/templates/registration/login.html
@@ -89,6 +89,8 @@
                         <button class='pull-right btn btn-primary login-button' type="submit">{% trans "Login" %}</button>
 
                     </form>
+                    <hr><br>
+                    <p>{% trans "Forgotten your password?" %} - <a href='{% url "password_reset" %}'>{% trans "Click here to reset" %}</a></p>
                     </div>
                 </div>
             </div>
