using feature in views

--- a/InvenTree/company/templates/company/company_base.html
+++ b/InvenTree/company/templates/company/company_base.html
@@ -6,7 +6,7 @@
 
 
 {% block page_title %}
-InvenTree | {% trans "Company" %} - {{ company.name }}
+{% inventree_title %} | {% trans "Company" %} - {{ company.name }}
 {% endblock %}
 
 
