--- a/InvenTree/order/templates/order/order_base.html
+++ b/InvenTree/order/templates/order/order_base.html
@@ -6,7 +6,7 @@
 {% load status_codes %}
 
 {% block page_title %}
-InvenTree | {% trans "Purchase Order" %}
+{% inventree_title %} | {% trans "Purchase Order" %}
 {% endblock %}
 
 {% block thumbnail %}
