--- a/InvenTree/order/templates/order/purchase_orders.html
+++ b/InvenTree/order/templates/order/purchase_orders.html
@@ -5,7 +5,7 @@
 {% load i18n %}
 
 {% block page_title %}
-InvenTree | {% trans "Purchase Orders" %}
+{% inventree_title %} | {% trans "Purchase Orders" %}
 {% endblock %}
 
 {% block content %}
