--- a/InvenTree/order/templates/order/sales_order_base.html
+++ b/InvenTree/order/templates/order/sales_order_base.html
@@ -6,7 +6,7 @@
 {% load status_codes %}
 
 {% block page_title %}
-InvenTree | {% trans "Sales Order" %}
+{% inventree_title %} | {% trans "Sales Order" %}
 {% endblock %}
 
 {% block pre_content %}
