--- a/InvenTree/stock/templates/stock/item_base.html
+++ b/InvenTree/stock/templates/stock/item_base.html
@@ -5,7 +5,7 @@
 {% load i18n %}
 
 {% block page_title %}
-InvenTree | {% trans "Stock Item" %} - {{ item }}
+{% inventree_title %} | {% trans "Stock Item" %} - {{ item }}
 {% endblock %}
 
 {% block sidenav %}
