--- a/InvenTree/templates/registration/password_reset_done.html
+++ b/InvenTree/templates/registration/password_reset_done.html
@@ -1,6 +1,7 @@
 {% load static %}
 {% load i18n %}
-{% load crispy_forms_tags %}      
+{% load crispy_forms_tags %}
+{% load inventree_extras %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -29,7 +30,7 @@
 </style>
 
 <title>
-    InvenTree
+    {% inventree_title %} 
 </title>
 </head>
 
@@ -42,7 +43,7 @@
             <div class='container-fluid'>
                 <div class='clearfix content-heading login-header'>
                     <img class="pull-left" src="{% static 'img/inventree.png' %}" width="60" height="60"/>
-                    <span><h3>InvenTree</h3></span>
+                    <span><h3>{% inventree_title %} </h3></span>
                 </div>
                     <hr>
                     <div class='container-fluid'>
