fix: don't link manufacturer part if it doesn't have one

--- a/InvenTree/order/templates/order/purchase_order_detail.html
+++ b/InvenTree/order/templates/order/purchase_order_detail.html
@@ -182,7 +182,11 @@ $("#po-table").inventreeTable({
             field: 'supplier_part_detail.MPN',
             title: '{% trans "MPN" %}',
             formatter: function(value, row, index, field) {
-                return renderLink(value, `/manufacturer-part/${row.supplier_part_detail.manufacturer_part.pk}/`);
+                if (row.supplier_part_detail.manufacturer_part) {
+                    return renderLink(value, `/manufacturer-part/${row.supplier_part_detail.manufacturer_part.pk}/`);
+                } else {
+                    return "";
+                }
             },
         },
         {
